client/src/containers/Dashboard/Dashboard.module.scss
@import '../../style/style.scss';

.screen {
  @include screen;
  @include row;
  background-color: $primary;
  background-image: url('./dashboardBackground.svg');
  background-size: cover;
  padding: 4em 8em;
  align-items: stretch;

  .leftColumn {
    @include column;
    align-items: stretch;
    justify-content: space-between;
    width: 60%;
  }

  .rightColumn {
    @include column;
    justify-content: space-between;
    align-items: flex-end;
    flex-grow: 1;
  }
}

.header {
  @include row;
  justify-content: space-between;
  align-items: stretch;
  margin-bottom: auto;

  .textContainer {
    @include column;
    justify-content: space-between;

    h1 {
      font-size: 3em;
    }

    h2 {
      font-size: 2em;
      font-weight: 500;
    }

    .title {
      @include row;
    }

    .username {
      color: $accent;
      margin-left: 0.5em;
    }
  }

  .avatarIcon {
    @include square(8em);
  }
}

.footer {
  @include row;
  justify-content: space-between;
  margin-top: 6em;

  p {
    font-size: 1.6em;
  }

  .button {
    @include rectangle(8em, 3em);
    @include rounded;
    @include center;
    font-size: 1.5em;
    text-decoration: none;
    background-color: $accent;
    color: $light;
    font-weight: 600;
    box-shadow: $shadow;
  }
}

.logo {
  margin-right: 4em;

  h1 {
    color: $primaryDark;
  }

  .row {
    @include row;
    .accent {
      color: $accent;
    }
  }
}

// just for animations
.learntTech {
  opacity: 1;
}

